# world

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
examples/: .gitignore  README.md  basic.ur  basic.urp  basic_in.ur.in  chatgptDemo.ur  chatgptDemo.urp  claudeDemo.ur  claudeDemo.urp  dropboxDemo.ur  dropboxDemo.urp  dropboxSecrets.ur  influxdbDemo.ur  influxdbDemo.urp  netSuiteDemo.ur  netSuiteDemo.urp  oidc.ur  oidc.urp  serviceNowDemo.ur  serviceNowDemo.urp  serviceNowDemo.urs  slackDemo.ur  slackDemo.urp  smartsheetDemo.ur  smartsheetDemo.urp  zenefitsDemo.ur  zenefitsDemo.urp  zoomDemo.ur  zoomDemo.urp
include/: world.h
m4/: libcurl.m4
src/c/: Makefile.am  world.c
src/ur/: api.ur  api.urs  chatgpt.ur  chatgpt.urs  claude.ur  claude.urs  clearbit.ur  clearbit.urs  config.urp.in  dropbox.ur  dropbox.urs  github.ur  github.urs  google.ur  google.urs  hotcrp.ur  hotcrp.urs  influxdb.ur  influxdb.urs  lib.urp  netSuite.ur  netSuite.urs  oauth.ur  oauth.urs  openAPI.ur  openAPI.urs  openIdConnect.ur  openIdConnect.urs  passwords.ur  passwords.urs  salesforce.ur  salesforce.urs  scopes.ur  scopes.urs  serviceNow.ur  serviceNow.urs  slack.ur  slack.urs  smartsheet.ur  smartsheet.urs  (+7 more)
